--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ericpoe/fizzbuzz",
+    "name": "ericpoe/tddFizzBuzz",
     "description": "A TDD version of FizzBuzz",
     "require-dev": {
         "phpunit/phpunit": "~4.3"
