--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ericpoe/tddFizzBuzz",
+    "name": "ericpoe/TddFizzBuzz",
     "description": "A TDD version of FizzBuzz",
     "require-dev": {
         "phpunit/phpunit": "~4.3"
