--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ php:
   # aliased to a recent 5.6.x version
   - 5.6
 
-script: phpunit --configuration phpunit.xml --coverage-text
+script: phpunit --coverage-text
 
 # configure notifications (email, IRC, campfire etc)
 notifications:
