--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,11 @@ php:
   # aliased to a recent 5.6.x version
   - 5.6
 
+install:
+  - composer install
+
 script:
-  - phpunit
+  - phpunit --configuration phpunit.xml --coverage-text
 
 # configure notifications (email, IRC, campfire etc)
 notifications:
