Minor code changes to make PSR2-compliant

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,10 @@
         "psr-4": {
             "TddFizzBuzz\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "TddFizzBuzzTests\\": "test/"
+        }
     }
 }
