--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,6 @@
 {
     "name": "ericpoe/TddFizzBuzz",
     "description": "A TDD version of FizzBuzz",
-    "require-dev": {
-        "phpunit/phpunit": "~4.3"
-    },
     "license": "MIT",
     "authors": [
         {
@@ -12,6 +9,9 @@
         }
     ],
     "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "~4.3"
+    },
     "autoload": {
         "psr-4": {
             "TddFizzBuzz\\": "src/"
@@ -19,7 +19,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "TddFizzBuzzTests\\": "test/"
+            "TddFizzBuzz\\Test\\": "test/"
         }
     }
 }
